--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <tbody>
       <tr>
         <td>2017-2020</td>
-        <td>Press Oficer at Contos da Praça, Oporto</td>
+        <td>Press Officer at Contos da Praça, Oporto</td>
       </tr>
       <tr>
         <td>2015</td>
